<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back_login"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/username"
            android:drawableLeft="@drawable/account"
            android:hint="@string/User_Name"
            android:layout_marginTop="170dp"
            android:textColor="#FFF"
            android:paddingLeft="0dp"
            android:drawablePadding="5dp"
            android:textColorHint="#999"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:drawableLeft="@drawable/lock"
            android:hint="@string/Password"
            android:layout_marginTop="10dp"
            android:textColor="#FFF"
            android:paddingLeft="0dp"
            android:drawablePadding="5dp"
            android:textColorHint="#999"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/Sign_In"
            android:id="@+id/Sign_in_button"
            android:background="@drawable/selector_xml_btn_yellow"
            android:layout_gravity="center_horizontal"
            android:onClick="checkLogin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="you are not alone"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:textColor="#FFF"
            />

    </LinearLayout>

</ScrollView>


