<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.sinsurance.NonGuiltyInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="22dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/title0"
                android:weightSum="1"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/non_guilty"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="left"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="18dp"
                    android:layout_marginEnd="18dp" />

                <Button
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="right"
                    android:layout_marginLeft="23dp"
                    android:layout_marginStart="23dp"
                    android:text="@string/next" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title0"
                android:id="@+id/title2"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="20dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="@string/name_and_lastname"
                    android:textSize="10dp"
                    android:textStyle="italic"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="10dp"
                    android:inputType="text" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title2"
                android:id="@+id/title3"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="20dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="@string/address"
                    android:textSize="10dp"
                    android:textStyle="italic"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="10dp"
                    android:inputType="text" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title3"
                android:id="@+id/title4"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="20dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="@string/phone_number"
                    android:textSize="10dp"
                    android:textStyle="italic"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="10dp"
                    android:inputType="text" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title4"
                android:id="@+id/title5"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="20dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="@string/type_of_license"
                    android:textSize="10dp"
                    android:textStyle="italic"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/l_type"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="10dp"
                    android:inputType="text" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title5"
                android:id="@+id/title6"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="20dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="@string/license_number"
                    android:textSize="10dp"
                    android:textStyle="italic"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/l_num"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="10dp"
                    android:inputType="text" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title6"
                android:id="@+id/title7"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="20dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="@string/damaged_part"
                    android:textSize="10dp"
                    android:textStyle="italic"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/damaged_part"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="10dp"
                    android:inputType="text" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title7"
                android:id="@+id/title8"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="20dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="شماره ی بیمه بدنه"
                    android:textSize="10dp"
                    android:textStyle="italic"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/b_i_num"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="10dp"
                    android:inputType="text" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title8"
                android:id="@+id/title9"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="20dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="شماره ی بیمه شخص ثالث"
                    android:textSize="10dp"
                    android:textStyle="italic"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/p_i_num"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="10dp"
                    android:inputType="text" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title9"
                android:id="@+id/title10"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="20dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="نام شرکت بیمه بدنه"
                    android:textSize="10dp"
                    android:textStyle="italic"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/b_i_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="10dp"
                    android:inputType="text" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title10"
                android:id="@+id/title11"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="20dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="نام شرکت بیمه شخص ثالث"
                    android:textSize="10dp"
                    android:textStyle="italic"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/p_i_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="10dp"
                    android:inputType="text" />

            </LinearLayout>


        </LinearLayout>




    </ScrollView>

</LinearLayout>
