<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.sinsurance.GeneralInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="22dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/title0"
                android:weightSum="1"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">
                >

                <TextView
                    android:id="@+id/serial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="left"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="18dp"
                    android:layout_marginEnd="18dp" />

                <Button
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="right"
                    android:layout_marginLeft="23dp"
                    android:layout_marginStart="23dp"
                    android:text="بعدی" />

            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title0"
                android:id="@+id/title1"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="20dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="تاریخ تصادف"
                    android:textSize="10dp"
                    android:textStyle="italic"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/accident_date"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="10dp"
                    android:inputType="text" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title2"
                android:id="@+id/title3"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="20dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="زمان تصادف"
                    android:textSize="10dp"
                    android:textStyle="italic"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/accident_time"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="10dp"
                    android:inputType="text" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title3"
                android:id="@+id/title4"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="20dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="تاریخ رسیدگی"
                    android:textSize="10dp"
                    android:textStyle="italic"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/attend_date"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="10dp"
                    android:inputType="text" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title4"
                android:id="@+id/title5"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="20dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="زمان رسیدگی "
                    android:textSize="10dp"
                    android:textStyle="italic"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/attend_time"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="10dp"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title4"
                android:id="@+id/title6"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_margin="20dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="نوع تصادف "
                    android:textSize="10dp"
                    android:textStyle="italic"
                    android:visibility="visible" />

                <RadioGroup
                    android:id="@+id/group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/khesarati"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/khesarati"
                        android:textSize="10dp"/>

                    <RadioButton
                        android:id="@+id/jarhi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/jarhi"
                        android:textSize="10dp"/>

                    <RadioButton
                        android:id="@+id/foti"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/footi"
                        android:textSize="10dp"/>
                </RadioGroup>

            </LinearLayout>



        </LinearLayout>



    </ScrollView>


</LinearLayout>
